--- a/css/pages.css
+++ b/css/pages.css
@@ -59,8 +59,11 @@ iframe{
     padding-bottom: 20px;
 
     display: block;
+
     margin-left: auto;
+
     margin-right: auto;
+
     width: 80%;
 }
 
@@ -100,15 +103,20 @@ table th, td {
      padding-right: 8%;
  }
  .centeredImg{
+
     display: block;
+
     margin-left: auto;
+
     margin-right: auto;
+    
     width: 80%;
  }
 
  .table{
    
     margin-left: 8%;
+
     margin-right: 8%;
    
  }
@@ -122,4 +130,14 @@ table th, td {
     font-size: small;
 
     font-style: italic;
+}
+
+.websiteInfoLists{
+
+    list-style: none;
+
+    padding-left: 8%;
+
+    padding-right: 8%;
+
 }
