--- a/css/style.css
+++ b/css/style.css
@@ -122,8 +122,10 @@ body{
     display: none;
 }
 
-/* end of body */
+/* end of body */z
 
+
+/* delete code bellow*/
 img.card-img-top {
     display: none;
     visibility: hidden;
