--- a/css/style.css
+++ b/css/style.css
@@ -122,11 +122,4 @@ body{
     display: none;
 }
 
-/* end of body */z
-
-
-/* delete code bellow*/
-img.card-img-top {
-    display: none;
-    visibility: hidden;
-}
+/* end of body */
